[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Rooms/Room6.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Objects/TheDie.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/RoomFinal6.gd" type="Script" id=3]
[ext_resource path="res://Scripts/NPCScrpits/NPC6.gd" type="Script" id=4]
[ext_resource path="res://Audio/Hum0.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Objects/CatFly.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Objects/NPC.tscn" type="PackedScene" id=7]
[ext_resource path="res://Audio/Industrial space.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Objects/Lightning.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Objects/CanLight.tscn" type="PackedScene" id=10]
[ext_resource path="res://Audio/Hum1.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/Hum3.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/HumBaseChord.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/Hum5.wav" type="AudioStream" id=14]
[ext_resource path="res://Audio/Hum2.wav" type="AudioStream" id=15]
[ext_resource path="res://Audio/BIDHUM3click.wav" type="AudioStream" id=16]
[ext_resource path="res://Scenes/Rooms/ASP3D.gd" type="Script" id=17]

[sub_resource type="Environment" id=1]
resource_local_to_scene = true
background_mode = 1
background_color = Color( 0.243137, 0.0666667, 0, 1 )
ambient_light_color = Color( 0.243137, 0.0666667, 0, 1 )
fog_enabled = true
fog_color = Color( 0.243137, 0.0666667, 0, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_depth_begin = 1.0
fog_depth_end = 2000.0
fog_depth_curve = 0.241484
fog_transmit_curve = 1.27456
fog_height_min = -102.6
fog_height_max = -256.4
fog_height_curve = 0.0398301
tonemap_mode = 2
dof_blur_far_enabled = true
dof_blur_far_distance = 5.0
dof_blur_far_transition = 3.82
dof_blur_far_amount = 0.09
dof_blur_far_quality = 0
dof_blur_near_quality = 0
glow_intensity = 0.57
glow_bloom = 0.2
glow_hdr_luminance_cap = 12.17
glow_hdr_scale = 1.38
adjustment_enabled = true

[node name="RoomFinal6" type="Spatial"]
script = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -7.832
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="TheDie" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.708635, 0, -0.705575, 0, 1, 0, 0.705575, 0, 0.708635, -0.95694, 0.1, -257.729 )

[node name="NPC2" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -261 )

[node name="Spatial" type="Spatial" parent="NPC2"]
script = ExtResource( 4 )

[node name="CatFly" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 0, -47.8422 )

[node name="Sounds" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 0, -47.8422 )

[node name="ASP3D" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource( 13 )
attenuation_model = 1
unit_db = 60.0
max_db = 6.0
max_distance = 1906.26
bus = "TheTowers"
attenuation_filter_cutoff_hz = 20500.0
script = ExtResource( 17 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds/ASP3D"]
stream = ExtResource( 13 )
volume_db = -8.191
bus = "TheTowers"

[node name="Hum0" type="AudioStreamPlayer3D" parent="Sounds/ASP3D"]
stream = ExtResource( 5 )
attenuation_model = 1
unit_db = 60.0
max_db = 6.0
max_distance = 1906.26
bus = "TheTowers"
attenuation_filter_cutoff_hz = 20500.0

[node name="Hum1" type="AudioStreamPlayer3D" parent="Sounds/ASP3D"]
stream = ExtResource( 11 )
attenuation_model = 1
unit_db = 60.0
max_db = 6.0
max_distance = 1906.26
bus = "TheTowers"
attenuation_filter_cutoff_hz = 20500.0

[node name="Hum2" type="AudioStreamPlayer3D" parent="Sounds/ASP3D"]
stream = ExtResource( 15 )
attenuation_model = 1
unit_db = 60.0
max_db = 6.0
max_distance = 1906.26
bus = "TheTowers"
attenuation_filter_cutoff_hz = 20500.0

[node name="Hum3" type="AudioStreamPlayer3D" parent="Sounds/ASP3D"]
stream = ExtResource( 12 )
attenuation_model = 1
unit_db = 60.0
max_db = 6.0
max_distance = 1906.26
bus = "TheTowers"
attenuation_filter_cutoff_hz = 20500.0

[node name="Hum4" type="AudioStreamPlayer3D" parent="Sounds/ASP3D"]
stream = ExtResource( 14 )
attenuation_model = 1
unit_db = 60.0
max_db = 6.0
max_distance = 1906.26
bus = "TheTowers"
attenuation_filter_cutoff_hz = 20500.0

[node name="Click" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )

[node name="Click3" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource( 16 )
attenuation_model = 1
unit_db = 80.0
max_db = 6.0
max_distance = 1906.26
attenuation_filter_cutoff_hz = 20500.0

[node name="Lightning1" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 5, -50 )
visible = false

[node name="Lightning2" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 5, -50 )
visible = false

[node name="Lightning3" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 5, -130 )
visible = false

[node name="Lightning4" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 5, -130 )
visible = false

[node name="Lightning5" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 5, -210 )
visible = false

[node name="Lightning6" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 5, -210 )
visible = false

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Room6" parent="." instance=ExtResource( 1 )]

[node name="CanLight3" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -27, -218 )

[node name="CanLight2" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -27, -211 )

[node name="CanLight" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -27, -203 )

[node name="CanLight4" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 43, 3 )

[node name="CanLight4" parent="CanLight4" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0 )

[node name="CanLight5" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -17, 3 )

[node name="CanLight4" parent="CanLight5" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0 )

[node name="TheDie2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.2384, 40.1, -2.7828 )

[connection signal="finished" from="Sounds/ASP3D" to="." method="_on_ASP3D_finished"]
[connection signal="finished" from="Sounds/ASP3D/Hum0" to="." method="_on_ASP3D_finished"]
[connection signal="finished" from="Sounds/ASP3D/Hum1" to="." method="_on_ASP3D_finished"]
[connection signal="finished" from="Sounds/ASP3D/Hum2" to="." method="_on_ASP3D_finished"]
[connection signal="finished" from="Sounds/ASP3D/Hum3" to="." method="_on_ASP3D_finished"]
[connection signal="finished" from="Sounds/ASP3D/Hum4" to="." method="_on_ASP3D_finished"]
[connection signal="finished" from="Sounds/Click3" to="." method="_on_ASP3D_finished"]
